// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 1`] = `
{
  "@angular-devkit/build-angular": "^17.X.X",
  "@angular-eslint/builder": "0.0.0-e2e",
  "@angular-eslint/eslint-plugin": "0.0.0-e2e",
  "@angular-eslint/eslint-plugin-template": "0.0.0-e2e",
  "@angular-eslint/schematics": "0.0.0-e2e",
  "@angular-eslint/template-parser": "0.0.0-e2e",
  "@angular/cli": "^17.X.X",
  "@angular/compiler-cli": "^17.X.X",
  "@types/jasmine": "~5.1.0",
  "@typescript-eslint/eslint-plugin": "6.18.1",
  "@typescript-eslint/parser": "6.18.1",
  "eslint": "^8.56.0",
  "jasmine-core": "~5.1.0",
  "karma": "~6.4.0",
  "karma-chrome-launcher": "~3.2.0",
  "karma-coverage": "~2.2.0",
  "karma-jasmine": "~5.1.0",
  "karma-jasmine-html-reporter": "~2.1.0",
  "ng-packagr": "^17.X.X",
  "typescript": "~5.X.X"
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 2`] = `
"{
  \\"root\\": true,
  \\"ignorePatterns\\": [
    \\"projects/**/*\\"
  ],
  \\"overrides\\": [
    {
      \\"files\\": [
        \\"*.ts\\"
      ],
      \\"extends\\": [
        \\"eslint:recommended\\",
        \\"plugin:@typescript-eslint/recommended\\",
        \\"plugin:@angular-eslint/recommended\\",
        \\"plugin:@angular-eslint/template/process-inline-templates\\"
      ],
      \\"rules\\": {
        \\"@angular-eslint/directive-selector\\": [
          \\"error\\",
          {
            \\"type\\": \\"attribute\\",
            \\"prefix\\": \\"app\\",
            \\"style\\": \\"camelCase\\"
          }
        ],
        \\"@angular-eslint/component-selector\\": [
          \\"error\\",
          {
            \\"type\\": \\"element\\",
            \\"prefix\\": \\"app\\",
            \\"style\\": \\"kebab-case\\"
          }
        ]
      }
    },
    {
      \\"files\\": [
        \\"*.html\\"
      ],
      \\"extends\\": [
        \\"plugin:@angular-eslint/template/recommended\\",
        \\"plugin:@angular-eslint/template/accessibility\\"
      ],
      \\"rules\\": {}
    }
  ]
}
"
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 3`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "src/**/*.ts",
      "src/**/*.html",
    ],
  },
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 4`] = `
"{
  \\"extends\\": \\"../../.eslintrc.json\\",
  \\"ignorePatterns\\": [
    \\"!**/*\\"
  ],
  \\"overrides\\": [
    {
      \\"files\\": [
        \\"*.ts\\"
      ],
      \\"rules\\": {
        \\"@angular-eslint/directive-selector\\": [
          \\"error\\",
          {
            \\"type\\": \\"attribute\\",
            \\"prefix\\": \\"app\\",
            \\"style\\": \\"camelCase\\"
          }
        ],
        \\"@angular-eslint/component-selector\\": [
          \\"error\\",
          {
            \\"type\\": \\"element\\",
            \\"prefix\\": \\"app\\",
            \\"style\\": \\"kebab-case\\"
          }
        ]
      }
    },
    {
      \\"files\\": [
        \\"*.html\\"
      ],
      \\"rules\\": {}
    }
  ]
}
"
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 5`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "projects/another-app/**/*.ts",
      "projects/another-app/**/*.html",
    ],
  },
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 6`] = `
"{
  \\"extends\\": \\"../../.eslintrc.json\\",
  \\"ignorePatterns\\": [
    \\"!**/*\\"
  ],
  \\"overrides\\": [
    {
      \\"files\\": [
        \\"*.ts\\"
      ],
      \\"rules\\": {
        \\"@angular-eslint/directive-selector\\": [
          \\"error\\",
          {
            \\"type\\": \\"attribute\\",
            \\"prefix\\": \\"lib\\",
            \\"style\\": \\"camelCase\\"
          }
        ],
        \\"@angular-eslint/component-selector\\": [
          \\"error\\",
          {
            \\"type\\": \\"element\\",
            \\"prefix\\": \\"lib\\",
            \\"style\\": \\"kebab-case\\"
          }
        ]
      }
    },
    {
      \\"files\\": [
        \\"*.html\\"
      ],
      \\"rules\\": {}
    }
  ]
}
"
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 7`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "projects/another-lib/**/*.ts",
      "projects/another-lib/**/*.html",
    ],
  },
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 8`] = `
"
Linting \\"new-workspace\\"...

All files pass linting.


Linting \\"another-app\\"...

All files pass linting.


Linting \\"another-lib\\"...

All files pass linting.
"
`;
